--- a/src/themes/joshadamboyd/css/design/layout/_footer.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_footer.scss
@@ -87,3 +87,18 @@
 .site-info span[role=separator]::before {
   content: '\002f';
 }
+
+
+
+
+
+
+
+
+
+
+footer.footer {
+  > .container {
+    background-color: #FF565C;
+  }
+}
