--- a/src/themes/joshadamboyd/css/design/layout/_header.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_header.scss
@@ -227,3 +227,5 @@ body:not(.has-header-image):not(.has-header-video) .custom-header-media {
   height: 100%;
   vertical-align: bottom;
 }
+
+header.header { }
