--- a/src/themes/joshadamboyd/css/design/_alignment.scss
+++ b/src/themes/joshadamboyd/css/design/_alignment.scss
@@ -1,6 +1,6 @@
-/*--------------------------------------------------------------
- Alignments
---------------------------------------------------------------*/
+//
+//** Alignment
+//
 
 .alignleft {
   display: inline;
