--- a/src/themes/joshadamboyd/css/design/_comments.scss
+++ b/src/themes/joshadamboyd/css/design/_comments.scss
@@ -1,16 +1,13 @@
-/*--------------------------------------------------------------
- Comments
---------------------------------------------------------------*/
+//
+//** Comments
+//
 
 #comments {
-  clear: both;
-  padding: 2em 0 0.5em;
+  padding: 2em 0 .5em;
 }
 
 .comments-title {
   font-size: 20px;
-  font-size: 1.25rem;
-  margin-bottom: 1.5em;
 }
 
 .comment-list,
@@ -20,8 +17,10 @@
   padding: 0;
 }
 
-.comment-list li:before {
-  display: none;
+.comment-list {
+  li::before {
+    display: none;
+  }
 }
 
 .comment-body {
@@ -29,22 +28,20 @@
 }
 
 .comment-author {
-  font-size: 16px;
-  font-size: 1rem;
-  margin-bottom: 0.4em;
+  margin-bottom: .4em;
   position: relative;
   z-index: 2;
-}
 
-.comment-author .avatar {
-  height: 50px;
-  left: -65px;
-  position: absolute;
-  width: 50px;
-}
+  .avatar {
+    height: 50px;
+    left: -65px;
+    position: absolute;
+    width: 50px;
+  }
 
-.comment-author .says {
-  display: none;
+  .says {
+    display: none;
+  }
 }
 
 .comment-meta {
@@ -52,41 +49,21 @@
 }
 
 .comment-metadata {
-  color: #767676;
-  font-size: 10px;
-  font-size: 0.625rem;
-  font-weight: 800;
-  letter-spacing: 0.1818em;
-  text-transform: uppercase;
+  font-size: 13px;
+
+  .comment-edit-link {
+    display: none;
+  }
+
 }
 
-.comment-metadata a {
-  color: #767676;
-}
-
-.comment-metadata a.comment-edit-link {
-  color: #222;
-  margin-left: 1em;
-}
-
-.comment-body {
-  color: #333;
-  font-size: 14px;
-  font-size: 0.875rem;
+.comment-content {
   margin-bottom: 4em;
 }
 
-.comment-reply-link {
-  font-weight: 800;
-  position: relative;
-}
-
 .comment-reply-link .icon {
-  color: #222;
-  left: -2em;
   height: 1em;
-  position: absolute;
-  top: 0;
+  margin-right: 5px;
   width: 1em;
 }
 
@@ -96,31 +73,10 @@
   width: 30px;
 }
 
-.bypostauthor > .comment-body > .comment-meta > .comment-author .avatar {
-  border: 1px solid #333;
-  padding: 2px;
-}
+//
+//** Comment Respond
+//
 
-.no-comments,
-.comment-awaiting-moderation {
-  color: #767676;
-  font-size: 14px;
-  font-size: 0.875rem;
-  font-style: italic;
-}
-
-.comments-pagination {
-  margin: 2em 0 3em;
-}
-
-.form-submit {
-  text-align: right;
-}
-
-.comment-form #wp-comment-cookies-consent {
-  margin: 0 10px 0 0;
-}
-
-.comment-form .comment-form-cookies-consent label {
-  display: inline;
+#respond {
+  padding: 0;
 }
