--- a/src/themes/joshadamboyd/css/design/_featured_image_hover.scss
+++ b/src/themes/joshadamboyd/css/design/_featured_image_hover.scss
@@ -2,17 +2,17 @@
  Featured Image Hover
 --------------------------------------------------------------*/
 
-.post-thumbnail {
-  margin-bottom: 1em;
-}
-
-.post-thumbnail a img {
-  -webkit-backface-visibility: hidden;
-  -webkit-transition: opacity 0.2s;
-  transition: opacity 0.2s;
-}
-
-.post-thumbnail a:hover img,
-.post-thumbnail a:focus img {
-  opacity: 0.7;
-}
+// .post-thumbnail {
+//   margin-bottom: 1em;
+// }
+//
+// .post-thumbnail a img {
+//   -webkit-backface-visibility: hidden;
+//   -webkit-transition: opacity 0.2s;
+//   transition: opacity 0.2s;
+// }
+//
+// .post-thumbnail a:hover img,
+// .post-thumbnail a:focus img {
+//   opacity: 0.7;
+// }
