--- a/src/themes/joshadamboyd/css/design/_forms.scss
+++ b/src/themes/joshadamboyd/css/design/_forms.scss
@@ -1,12 +1,26 @@
-/*--------------------------------------------------------------
- Forms
---------------------------------------------------------------*/
+//
+//** Forms
+//
+
+::-webkit-input-placeholder {
+  color: $gray-600;
+}
+
+:-moz-placeholder {
+  color: $gray-600;
+}
+
+::-moz-placeholder {
+  color: $gray-600;
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  color: $gray-600;
+}
 
 label {
-  color: #333;
   display: block;
-  font-weight: 800;
-  margin-bottom: 0.5em;
 }
 
 fieldset {
@@ -29,54 +43,37 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-  color: #666;
-  background: #fff;
-  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
-  border: 1px solid #bbb;
+  background: $white;
+  background-image: -webkit-linear-gradient($white, $white);
+  border: 1px solid $gray-500;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   display: block;
-  padding: 0.7em;
+  padding: .7em;
   width: 100%;
+
+  &:focus {
+    border-color: $gray-700;
+  }
 }
 
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[type="search"]:focus,
-input[type="number"]:focus,
-input[type="tel"]:focus,
-input[type="range"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="week"]:focus,
-input[type="time"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="color"]:focus,
-textarea:focus {
-  color: #222;
-  border-color: #333;
-}
+// select {
+//   border: 1px solid #bbb;
+//   -webkit-border-radius: 3px;
+//   border-radius: 3px;
+//   height: 3em;
+//   max-width: 100%;
+// }
 
-select {
-  border: 1px solid #bbb;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  height: 3em;
-  max-width: 100%;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin-right: 0.5em;
-}
-
-input[type="radio"] + label,
-input[type="checkbox"] + label {
-  font-weight: 400;
-}
+// input[type="radio"],
+// input[type="checkbox"] {
+//   margin-right: 0.5em;
+// }
+//
+// input[type="radio"] + label,
+// input[type="checkbox"] + label {
+//   font-weight: 400;
+// }
 
 button,
 input[type="button"],
@@ -87,11 +84,11 @@ input[type="submit"] {
   border-radius: 2px;
   -webkit-box-shadow: none;
   box-shadow: none;
-  color: #fff;
+  color: $white;
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
-  font-size: 0.875rem;
+  font-size: .875rem;
   font-weight: 800;
   line-height: 1;
   padding: 1em 2em;
@@ -100,62 +97,39 @@ input[type="submit"] {
   transition: background 0.2s;
 }
 
-input + button,
-input + input[type="button"],
-input + input[type="submit"] {
-  padding: 0.75em 2em;
-}
-
-button.secondary,
-input[type="reset"],
-input[type="button"].secondary,
-input[type="reset"].secondary,
-input[type="submit"].secondary {
-  background-color: #ddd;
-  color: #222;
-}
-
-button:hover,
-button:focus,
-input[type="button"]:hover,
-input[type="button"]:focus,
-input[type="submit"]:hover,
-input[type="submit"]:focus {
-  background: #767676;
-}
-
-button.secondary:hover,
-button.secondary:focus,
-input[type="reset"]:hover,
-input[type="reset"]:focus,
-input[type="button"].secondary:hover,
-input[type="button"].secondary:focus,
-input[type="reset"].secondary:hover,
-input[type="reset"].secondary:focus,
-input[type="submit"].secondary:hover,
-input[type="submit"].secondary:focus {
-  background: #bbb;
-}
-
-/* Placeholder text color -- selectors need to be separate to work. */
-::-webkit-input-placeholder {
-  color: #333;
-  font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
-}
-
-:-moz-placeholder {
-  color: #333;
-  font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
-}
-
-::-moz-placeholder {
-  color: #333;
-  font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
-  opacity: 1;
-  /* Since FF19 lowers the opacity of the placeholder by default */
-}
-
-:-ms-input-placeholder {
-  color: #333;
-  font-family: "Libre Franklin", "Helvetica Neue", helvetica, arial, sans-serif;
-}
+// input + button,
+// input + input[type="button"],
+// input + input[type="submit"] {
+//   padding: 0.75em 2em;
+// }
+//
+// button.secondary,
+// input[type="reset"],
+// input[type="button"].secondary,
+// input[type="reset"].secondary,
+// input[type="submit"].secondary {
+//   background-color: #ddd;
+//   color: #222;
+// }
+//
+// button:hover,
+// button:focus,
+// input[type="button"]:hover,
+// input[type="button"]:focus,
+// input[type="submit"]:hover,
+// input[type="submit"]:focus {
+//   background: #767676;
+// }
+//
+// button.secondary:hover,
+// button.secondary:focus,
+// input[type="reset"]:hover,
+// input[type="reset"]:focus,
+// input[type="button"].secondary:hover,
+// input[type="button"].secondary:focus,
+// input[type="reset"].secondary:hover,
+// input[type="reset"].secondary:focus,
+// input[type="submit"].secondary:hover,
+// input[type="submit"].secondary:focus {
+//   background: #bbb;
+// }
