--- a/src/themes/joshadamboyd/css/design/_layout.scss
+++ b/src/themes/joshadamboyd/css/design/_layout.scss
@@ -1,6 +1,18 @@
-/*--------------------------------------------------------------
- Layout
---------------------------------------------------------------*/
+//
+//* Layout
+//
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+:focus {
+  outline: none;
+}
 
 html {
   -webkit-box-sizing: border-box;
@@ -8,35 +20,21 @@ html {
   box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-  /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
-body {
-  background: #fff;
-  /* Fallback for when there is no custom background color defined. */
-}
-
-#page {
-  position: relative;
-  word-wrap: break-word;
-}
-
-.wrap {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 700px;
-  padding-left: 2em;
-  padding-right: 2em;
-}
-
-.wrap:after {
-  clear: both;
-  content: "";
-  display: block;
-}
+// #page {
+//   position: relative;
+//   word-wrap: break-word;
+// }
+//
+// .wrap {
+//   margin-left: auto;
+//   margin-right: auto;
+//   max-width: 700px;
+//   padding-left: 2em;
+//   padding-right: 2em;
+// }
+//
+// .wrap::after {
+//   clear: both;
+//   content: '';
+//   display: block;
+// }
