--- a/src/themes/joshadamboyd/css/design/layout/_regular_content.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_regular_content.scss
@@ -2,11 +2,11 @@
  Regular Content
 --------------------------------------------------------------*/
 
-.site-content-contain {
-  background-color: #fff;
-  position: relative;
-}
-
-.site-content {
-  padding: 2.5em 0 0;
-}
+// .site-content-contain {
+//   background-color: #fff;
+//   position: relative;
+// }
+//
+// .site-content {
+//   padding: 2.5em 0 0;
+// }
