--- a/src/themes/joshadamboyd/css/style.scss
+++ b/src/themes/joshadamboyd/css/style.scss
@@ -21,6 +21,8 @@
 @import 'design/layout';
 @import 'design/layout/header';
 @import 'design/layout/footer';
+@import 'design/layout/pagination';
+@import 'design/layout/categories';
 @import 'design/layout/front_page';
 @import 'design/layout/posts';
 @import 'design/layout/regular_content';
