--- a/src/themes/joshadamboyd/css/common/_fonts.scss
+++ b/src/themes/joshadamboyd/css/common/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
