--- a/src/themes/joshadamboyd/css/design/layout/_categories.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_categories.scss
@@ -1,6 +1,11 @@
+//
+//** Category Listing
+//
+
 .cats {
   font-size: 18px;
   list-style: none;
+  margin: 25px auto;
   padding-left: 0;
   text-align: center;
   text-transform: uppercase;
@@ -10,7 +15,7 @@
     display: inline-block;
 
     &:not(:last-child) {
-      margin-right: .5rem;
+      margin-right: 2.5rem;
     }
 
     a {
