--- a/src/themes/joshadamboyd/css/common/_fonts.scss
+++ b/src/themes/joshadamboyd/css/common/_fonts.scss
@@ -1,1 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
+
+@import url('https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css');
+@import url('https://use.fontawesome.com/releases/v5.3.1/css/solid.css');
