--- a/wp-content/themes/joshadamboyd/assets/css/style.css
+++ b/wp-content/themes/joshadamboyd/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);/*!
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);@import url(https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css);@import url(https://use.fontawesome.com/releases/v5.3.1/css/solid.css);/*!
  * Bootstrap v4.1.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
