--- a/src/themes/joshadamboyd/css/design/layout/_header.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_header.scss
@@ -1,6 +1,14 @@
-/*--------------------------------------------------------------
- Header
---------------------------------------------------------------*/
+//
+//** Header
+//
+
+// <div class="custom-header">
+//   <div class="custom-header-media">
+//     <div id="wp-custom-header" class="wp-custom-header">
+//       <img src="http://localhost:8080/wp-content/themes/joshadamboyd/assets/images/header.jpg" alt="JoshAdamBoyd" width="2000" height="1200">
+//     </div>
+//   </div>
+// </div>
 
 // #masthead .wrap {
 //   position: relative;
