--- a/src/themes/joshadamboyd/css/style.scss
+++ b/src/themes/joshadamboyd/css/style.scss
@@ -14,6 +14,7 @@
 @import 'common/wordpress';
 
 // Core
+@import 'design/images';
 @import 'design/svg_fallbacks';
 @import 'design/clearings';
 @import 'design/typography';
