--- a/src/themes/joshadamboyd/css/style.scss
+++ b/src/themes/joshadamboyd/css/style.scss
@@ -24,6 +24,7 @@
 @import 'design/layout';
 @import 'design/layout/header';
 @import 'design/layout/footer';
+@import 'design/layout/hud';
 @import 'design/layout/pagination';
 @import 'design/layout/categories';
 @import 'design/layout/front_page';
