--- a/src/themes/joshadamboyd/css/design/layout/_pagination.scss
+++ b/src/themes/joshadamboyd/css/design/layout/_pagination.scss
@@ -1,4 +1,5 @@
-.pagination {
+.pagination,
+.post-navigation {
   display: block;
   margin: 96px 0;
 
@@ -47,4 +48,49 @@
 
 .prev {
   &.page-numbers { }
+}
+
+.post-navigation {
+  .nav-links {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+}
+
+.nav-next,
+.nav-previous {
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+
+  a {
+    &:focus,
+    &:hover {
+      @include border-radius($card-border-radius);
+      // background-color: $red;
+      // color: $white;
+      color: $red;
+      text-decoration: none;
+    }
+  }
+
+  .screen-reader-text {
+    display: inline-block;
+  }
+}
+
+.nav-next {
+  i {
+    margin-left: 10px;
+  }
+}
+
+.nav-previous {
+  i {
+    margin-right: 10px;
+  }
 }
